add create product route
